# fetch_git_repo

./: .editorconfig  .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  setup.cfg  start.py
src/: main.py  my_types.py
tests/: conftest.py  test_calculate_hash.py  test_create_empty.py  test_download_file_structure.py  test_fetch_repo_structure.py  test_main.py  test_write_file.py  test_write_files.py
